--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,8 @@ body::-webkit-scrollbar-thumb {
 footer{
     background: #333;
     color: #fff;
-    padding: 76px 0;
+    padding: 30px 0;
+    /* height: 30px; */
 }
 footer p{
     font-size: 15px;
