added image border-radius

--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ body::-webkit-scrollbar-thumb {
     max-width: 100%;
     height: auto;
     margin-bottom: 20px;
+    border-radius: 20px;
 }
 .about .container  h2{
     margin-bottom: 25px;
